tests/specs/ecosystem/flashcard/core/0_0_2.test
flashcard/core/0.0.2
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS1192 [ERROR]: Module '"file://<tmpdir>/scheduler.ts"' has no default export.
import Scheduler from "./scheduler.ts";
       ~~~~~~~~~
    at file://<tmpdir>/deck.ts:4:8

TS2305 [ERROR]: Module '"file://<tmpdir>/scheduler.ts"' has no exported member 'default'.
export { default as Scheduler } from "./scheduler.ts";
         ~~~~~~~
    at file://<tmpdir>/mod.ts:9:10

Found 2 errors.

error: Type checking failed.

